--- a/JavaScritp/modulo D/ex015/exe015.html
+++ b/JavaScritp/modulo D/ex015/exe015.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Verificador do idade</h1>
+        <h1>Verificador do Idade</h1>
 
     </header>
     <section>
