--- a/JavaScritp/modulo F/projeto_analisador_numerico/exe018.html
+++ b/JavaScritp/modulo F/projeto_analisador_numerico/exe018.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Analisador de Numeros</h1>
+        <h1>Analisador de Números</h1>
 
     </header>
     <section>
