--- a/JavaScritp/modulo F/projeto_analisador_numerico/index.html
+++ b/JavaScritp/modulo F/projeto_analisador_numerico/index.html
@@ -15,7 +15,7 @@
 
     </header>
     <section>
-        <div>
+        <div class="container">
            Numeros (entre 1 e 100):
            <input type="number" name="fnum" id="fnum">
            <input type="button" value="Adcionar" onclick="adicionar()">
